crono_tt4/TimeTagger4_interface.h


#define TIMETAGGER4_API_VERSION 0
#define TIMETAGGER4_TDC_CHANNEL_COUNT 4
#define TIMETAGGER4_LOWRES_CHANNEL_COUNT 3
#define TIMETAGGER4_TIGER_COUNT 5
#define TIMETAGGER4_TRIGGER_COUNT 16		
#define TIMETAGGER4_BUFFER_ALLOCATE		0	
#define TIMETAGGER4_BUFFER_USE_PHYSICAL	1	
#define TIMETAGGER4_TDC_MODE_GROUPED	0	
#define TIMETAGGER4_TDC_MODE_CONTINUOUS	1	
#define TIMETAGGER4_DC_OFFSET_P_NIM			+0.35
#define TIMETAGGER4_DC_OFFSET_P_CMOS		+1.18
#define TIMETAGGER4_DC_OFFSET_P_LVCMOS_33	+1.18
#define TIMETAGGER4_DC_OFFSET_P_LVCMOS_25	+1.18
#define TIMETAGGER4_DC_OFFSET_P_LVCMOS_18	+0.90
#define TIMETAGGER4_DC_OFFSET_P_TTL			+1.18
#define TIMETAGGER4_DC_OFFSET_P_LVTTL_33	+1.18
#define TIMETAGGER4_DC_OFFSET_P_LVTTL_25	+1.18
#define TIMETAGGER4_DC_OFFSET_P_SSTL_3		+1.18
#define TIMETAGGER4_DC_OFFSET_P_SSTL_2		+1.18
#define TIMETAGGER4_DC_OFFSET_N_NIM			-0.35
#define TIMETAGGER4_DC_OFFSET_N_CMOS		-1.32
#define TIMETAGGER4_DC_OFFSET_N_LVCMOS_33	-1.32
#define TIMETAGGER4_DC_OFFSET_N_LVCMOS_25	-1.25
#define TIMETAGGER4_DC_OFFSET_N_LVCMOS_18	-0.90
#define TIMETAGGER4_DC_OFFSET_N_TTL			-1.32
#define TIMETAGGER4_DC_OFFSET_N_LVTTL_33	-1.32
#define TIMETAGGER4_DC_OFFSET_N_LVTTL_25	-1.25
#define TIMETAGGER4_DC_OFFSET_N_SSTL_3		-1.32
#define TIMETAGGER4_DC_OFFSET_N_SSTL_2		-1.25
#define TIMETAGGER4_TRIGGER_SOURCE_S		0x00000001
#define TIMETAGGER4_TRIGGER_SOURCE_A		0x00000002
#define TIMETAGGER4_TRIGGER_SOURCE_B		0x00000004
#define TIMETAGGER4_TRIGGER_SOURCE_C		0x00000008
#define TIMETAGGER4_TRIGGER_SOURCE_D		0x00000010
#define TIMETAGGER4_TRIGGER_SOURCE_S1		0x00000020
#define TIMETAGGER4_TRIGGER_SOURCE_S2		0x00000040
#define TIMETAGGER4_TRIGGER_SOURCE_GATE		0x00000080
#define TIMETAGGER4_TRIGGER_SOURCE_AUTO		0x00004000
#define TIMETAGGER4_TRIGGER_SOURCE_ONE		0x00008000
#define TIMETAGGER4_PACKET_FLAG_ODD_HITS		1 
#define TIMETAGGER4_PACKET_FLAG_SLOW_SYNC		2 
#define TIMETAGGER4_PACKET_FLAG_START_MISSED	4 
#define TIMETAGGER4_PACKET_FLAG_SHORTENED		8 
#define TIMETAGGER4_PACKET_FLAG_DMA_FIFO_FULL		16
#define TIMETAGGER4_PACKET_FLAG_HOST_BUFFER_FULL	32
#define TIMETAGGER4_HIT_FLAG_RISING				1 
#define TIMETAGGER4_HIT_FLAG_TIME_OVERFLOW		2 
#define TIMETAGGER4_HIT_FLAG_COARSE_TIMESTAMP	4 
#define TIMETAGGER4_HIT_FLAG_TDC_MISSING		4 
#define TIMETAGGER4_HIT_FLAG_FPGA_MISSING		8 
#define CRONO_DEVICE_TIMETAGGER4 8
#define TIMETAGGER4_OK					0
#define TIMETAGGER4_WINDRIVER_NOT_FOUND	1	
#define TIMETAGGER4_DEVICE_NOT_FOUND	2	
#define TIMETAGGER4_NOT_INITIALIZED		3	
#define TIMETAGGER4_INVALID_DEVICE				5
#define TIMETAGGER4_BUFFER_ALLOC_FAILED			6	
#define TIMETAGGER4_TDC_NO_EDGE_FOUND			7	
#define TIMETAGGER4_INVALID_BUFFER_PARAMETERS	8	
#define TIMETAGGER4_INVALID_CONFIG_PARAMETERS	9	
#define TIMETAGGER4_WINDOW_CALIBRATION_FAILED	10	
#define TIMETAGGER4_HARDWARE_FAILURE			11	
#define TIMETAGGER4_INVALID_TDC_MODE			12	
#define TIMETAGGER4_SYNCHRONIZATION_FAILED		13	
#define TIMETAGGER4_DEVICE_OPEN_FAILED			14	
#define TIMETAGGER4_WRONG_STATE					4