crono_tt4/TDC4_interface.h


#define TDC4_API_VERSION 0
#define TDC4_TDC_CHANNEL_COUNT 4
#define TDC4_LOWRES_CHANNEL_COUNT 3
#define TDC4_TIGER_COUNT 5
#define TDC4_TRIGGER_COUNT 16		
#define TDC4_RCLK_37M5 0
#define TDC4_RCLK_75M 1
#define TDC4_RCLK_150M 2
	typedef struct {
		int version;
		int card_index;
		int board_id;
		__int64 buffer_size[8];
		int buffer_type;
		__int64 buffer_address;
		int variant;
		int device_type;
		int dma_read_delay;
		int use_ext_clock;
		int rclk_sel;
	} tdc4_init_parameters;