src/crono-bindgen/crono_tt4.rs

/* automatically generated by rust-bindgen 0.58.1 */

pub const CRONO_OK: u32 = 0;
pub const CRONO_WINDRIVER_NOT_FOUND: u32 = 1;
pub const CRONO_DEVICE_NOT_FOUND: u32 = 2;
pub const CRONO_NOT_INITIALIZED: u32 = 3;
pub const CRONO_WRONG_STATE: u32 = 4;
pub const CRONO_INVALID_DEVICE: u32 = 5;
pub const CRONO_BUFFER_ALLOC_FAILED: u32 = 6;
pub const CRONO_TDC_NO_EDGE_FOUND: u32 = 7;
pub const CRONO_INVALID_BUFFER_PARAMETERS: u32 = 8;
pub const CRONO_INVALID_CONFIG_PARAMETERS: u32 = 9;
pub const CRONO_WINDOW_CALIBRATION_FAILED: u32 = 10;
pub const CRONO_HARDWARE_FAILURE: u32 = 11;
pub const CRONO_INVALID_ADC_MODE: u32 = 12;
pub const CRONO_SYNCHRONIZATION_FAILED: u32 = 13;
pub const CRONO_DEVICE_OPEN_FAILED: u32 = 14;
pub const CRONO_INTERNAL_ERROR: u32 = 15;
pub const CRONO_PACKET_TYPE_8_BIT_SIGNED: u32 = 0;
pub const CRONO_PACKET_TYPE_16_BIT_SIGNED: u32 = 1;
pub const CRONO_PACKET_TYPE_32_BIT_SIGNED: u32 = 2;
pub const CRONO_PACKET_TYPE_64_BIT_SIGNED: u32 = 3;
pub const CRONO_PACKET_TYPE_8_BIT_UNSIGNED: u32 = 4;
pub const CRONO_PACKET_TYPE_16_BIT_UNSIGNED: u32 = 5;
pub const CRONO_PACKET_TYPE_32_BIT_UNSIGNED: u32 = 6;
pub const CRONO_PACKET_TYPE_64_BIT_UNSIGNED: u32 = 7;
pub const CRONO_PACKET_TYPE_TIMESTAMP_ONLY: u32 = 128;
pub const CRONO_PACKET_TYPE_END_OF_BUFFER: u32 = 129;
pub const CRONO_PACKET_TYPE_TRIGGER_PATTERN: u32 = 130;
pub const CRONO_PACKET_FLAG_SHORTENED: u32 = 1;
pub const CRONO_PACKET_FLAG_PACKETS_LOST: u32 = 2;
pub const CRONO_PACKET_FLAG_OVERFLOW: u32 = 4;
pub const CRONO_PACKET_FLAG_TRIGGER_MISSED: u32 = 8;
pub const CRONO_PACKET_FLAG_DMA_FIFO_FULL: u32 = 16;
pub const CRONO_PACKET_FLAG_HOST_BUFFER_FULL: u32 = 32;
pub const CRONO_PACKET_FLAG_TDC_NO_EDGE: u32 = 64;
pub const CRONO_DEVICE_UNKNOWN: u32 = 0;
pub const CRONO_DEVICE_HPTDC: u32 = 1;
pub const CRONO_DEVICE_NDIGO5G: u32 = 2;
pub const CRONO_DEVICE_NDIGO250M: u32 = 4;
pub const CRONO_DEVICE_NDIGO_AVRG: u32 = 3;
pub const CRONO_DEVICE_XTDC4: u32 = 6;
pub const CRONO_DEVICE_FMC_TDC10: u32 = 7;
pub const CRONO_DEVICE_TIMETAGGER4: u32 = 8;
pub const CRONO_DEVICE_D_AVE12: u32 = 9;
pub const CRONO_DEVICE_D_AVE14: u32 = 10;
pub const CRONO_DEVICE_NDIGO2G14: u32 = 11;
pub const CRONO_READ_OK: u32 = 0;
pub const CRONO_READ_NO_DATA: u32 = 1;
pub const CRONO_READ_INTERNAL_ERROR: u32 = 2;
pub const CRONO_READ_TIMEOUT: u32 = 3;
pub const TDC4_API_VERSION: u32 = 0;
pub const TDC4_TDC_CHANNEL_COUNT: u32 = 4;
pub const TDC4_LOWRES_CHANNEL_COUNT: u32 = 3;
pub const TDC4_TIGER_COUNT: u32 = 5;
pub const TDC4_TRIGGER_COUNT: u32 = 16;
pub const TDC4_RCLK_37M5: u32 = 0;
pub const TDC4_RCLK_75M: u32 = 1;
pub const TDC4_RCLK_150M: u32 = 2;
pub const TIMETAGGER4_API_VERSION: u32 = 0;
pub const TIMETAGGER4_TDC_CHANNEL_COUNT: u32 = 4;
pub const TIMETAGGER4_LOWRES_CHANNEL_COUNT: u32 = 3;
pub const TIMETAGGER4_TIGER_COUNT: u32 = 5;
pub const TIMETAGGER4_TRIGGER_COUNT: u32 = 16;
pub const TIMETAGGER4_BUFFER_ALLOCATE: u32 = 0;
pub const TIMETAGGER4_BUFFER_USE_PHYSICAL: u32 = 1;
pub const TIMETAGGER4_TDC_MODE_GROUPED: u32 = 0;
pub const TIMETAGGER4_TDC_MODE_CONTINUOUS: u32 = 1;
pub const TIMETAGGER4_DC_OFFSET_P_NIM: f64 = 0.35;
pub const TIMETAGGER4_DC_OFFSET_P_CMOS: f64 = 1.18;
pub const TIMETAGGER4_DC_OFFSET_P_LVCMOS_33: f64 = 1.18;
pub const TIMETAGGER4_DC_OFFSET_P_LVCMOS_25: f64 = 1.18;
pub const TIMETAGGER4_DC_OFFSET_P_LVCMOS_18: f64 = 0.9;
pub const TIMETAGGER4_DC_OFFSET_P_TTL: f64 = 1.18;
pub const TIMETAGGER4_DC_OFFSET_P_LVTTL_33: f64 = 1.18;
pub const TIMETAGGER4_DC_OFFSET_P_LVTTL_25: f64 = 1.18;
pub const TIMETAGGER4_DC_OFFSET_P_SSTL_3: f64 = 1.18;
pub const TIMETAGGER4_DC_OFFSET_P_SSTL_2: f64 = 1.18;
pub const TIMETAGGER4_DC_OFFSET_N_NIM: f64 = -0.35;
pub const TIMETAGGER4_DC_OFFSET_N_CMOS: f64 = -1.32;
pub const TIMETAGGER4_DC_OFFSET_N_LVCMOS_33: f64 = -1.32;
pub const TIMETAGGER4_DC_OFFSET_N_LVCMOS_25: f64 = -1.25;
pub const TIMETAGGER4_DC_OFFSET_N_LVCMOS_18: f64 = -0.9;
pub const TIMETAGGER4_DC_OFFSET_N_TTL: f64 = -1.32;
pub const TIMETAGGER4_DC_OFFSET_N_LVTTL_33: f64 = -1.32;
pub const TIMETAGGER4_DC_OFFSET_N_LVTTL_25: f64 = -1.25;
pub const TIMETAGGER4_DC_OFFSET_N_SSTL_3: f64 = -1.32;
pub const TIMETAGGER4_DC_OFFSET_N_SSTL_2: f64 = -1.25;
pub const TIMETAGGER4_TRIGGER_SOURCE_S: u32 = 1;
pub const TIMETAGGER4_TRIGGER_SOURCE_A: u32 = 2;
pub const TIMETAGGER4_TRIGGER_SOURCE_B: u32 = 4;
pub const TIMETAGGER4_TRIGGER_SOURCE_C: u32 = 8;
pub const TIMETAGGER4_TRIGGER_SOURCE_D: u32 = 16;
pub const TIMETAGGER4_TRIGGER_SOURCE_S1: u32 = 32;
pub const TIMETAGGER4_TRIGGER_SOURCE_S2: u32 = 64;
pub const TIMETAGGER4_TRIGGER_SOURCE_GATE: u32 = 128;
pub const TIMETAGGER4_TRIGGER_SOURCE_AUTO: u32 = 16384;
pub const TIMETAGGER4_TRIGGER_SOURCE_ONE: u32 = 32768;
pub const TIMETAGGER4_PACKET_FLAG_ODD_HITS: u32 = 1;
pub const TIMETAGGER4_PACKET_FLAG_SLOW_SYNC: u32 = 2;
pub const TIMETAGGER4_PACKET_FLAG_START_MISSED: u32 = 4;
pub const TIMETAGGER4_PACKET_FLAG_SHORTENED: u32 = 8;
pub const TIMETAGGER4_PACKET_FLAG_DMA_FIFO_FULL: u32 = 16;
pub const TIMETAGGER4_PACKET_FLAG_HOST_BUFFER_FULL: u32 = 32;
pub const TIMETAGGER4_HIT_FLAG_RISING: u32 = 1;
pub const TIMETAGGER4_HIT_FLAG_TIME_OVERFLOW: u32 = 2;
pub const TIMETAGGER4_HIT_FLAG_COARSE_TIMESTAMP: u32 = 4;
pub const TIMETAGGER4_HIT_FLAG_TDC_MISSING: u32 = 4;
pub const TIMETAGGER4_HIT_FLAG_FPGA_MISSING: u32 = 8;
pub const TIMETAGGER4_OK: u32 = 0;
pub const TIMETAGGER4_WINDRIVER_NOT_FOUND: u32 = 1;
pub const TIMETAGGER4_DEVICE_NOT_FOUND: u32 = 2;
pub const TIMETAGGER4_NOT_INITIALIZED: u32 = 3;
pub const TIMETAGGER4_INVALID_DEVICE: u32 = 5;
pub const TIMETAGGER4_BUFFER_ALLOC_FAILED: u32 = 6;
pub const TIMETAGGER4_TDC_NO_EDGE_FOUND: u32 = 7;
pub const TIMETAGGER4_INVALID_BUFFER_PARAMETERS: u32 = 8;
pub const TIMETAGGER4_INVALID_CONFIG_PARAMETERS: u32 = 9;
pub const TIMETAGGER4_WINDOW_CALIBRATION_FAILED: u32 = 10;
pub const TIMETAGGER4_HARDWARE_FAILURE: u32 = 11;
pub const TIMETAGGER4_INVALID_TDC_MODE: u32 = 12;
pub const TIMETAGGER4_SYNCHRONIZATION_FAILED: u32 = 13;
pub const TIMETAGGER4_DEVICE_OPEN_FAILED: u32 = 14;
pub const TIMETAGGER4_WRONG_STATE: u32 = 4;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct crono_device {
    pub device_type: ::std::os::raw::c_int,
    #[doc = " For HPTDC use this board id, Ndigo uses configured board id"]
    pub board_id: ::std::os::raw::c_int,
    pub device: *mut ::std::os::raw::c_void,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct crono_packet {
    pub channel: ::std::os::raw::c_uchar,
    pub card: ::std::os::raw::c_uchar,
    pub type_: ::std::os::raw::c_uchar,
    pub flags: ::std::os::raw::c_uchar,
    pub length: ::std::os::raw::c_uint,
    pub timestamp: ::std::os::raw::c_longlong,
    pub data: [::std::os::raw::c_ulonglong; 1usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct crono_packet_only_timestamp {
    pub channel: ::std::os::raw::c_uchar,
    pub card: ::std::os::raw::c_uchar,
    pub type_: ::std::os::raw::c_uchar,
    pub flags: ::std::os::raw::c_uchar,
    pub length: ::std::os::raw::c_uint,
    pub timestamp: ::std::os::raw::c_longlong,
}
#[doc = "\t\\ingroup initparamsstruct"]
#[doc = "\t\\brief struct for the initialization of the xTDC4"]
#[doc = ""]
#[doc = "\tthis structure MUST be completely INITIALIZED"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tdc4_init_parameters {
    #[doc = " \\brief the version number"]
    #[doc = ""]
    #[doc = "\tmust be set to @link apiversion XTDC4_API_VERSION @endlink"]
    pub version: ::std::os::raw::c_int,
    #[doc = " \\brief The index in the list of XTDC4 boards that should be initialized."]
    #[doc = ""]
    #[doc = "\tThere might be multiple boards in the system that are handled by this driver as reported by @link"]
    #[doc = "\tinitialization ndigo_count_devices() @endlink. This index selects one of them. Boards are enumerated"]
    #[doc = "\tdepending on the PCIe slot. The lower the bus number and the lower the slot number the lower the card"]
    #[doc = "\tindex."]
    pub card_index: ::std::os::raw::c_int,
    #[doc = " \\brief the global index in all cronologic devices"]
    #[doc = ""]
    #[doc = "\tThis 8 bit number is filled into each packet created by the board and is useful if data streams of"]
    #[doc = "\tmultiple boards will be merged. If only XTDC4 cards are used this number can be set to the"]
    #[doc = "\t@link card_index card_index @endlink. If boards of different types that use a compatible data format"]
    #[doc = "\tare used in a system each board should get a unique id."]
    pub board_id: ::std::os::raw::c_int,
    #[doc = "\t\\brief The minimum size of the DMA buffer."]
    #[doc = ""]
    #[doc = "\tIf set to 0 the default size of 16MB is used."]
    #[doc = "\tFor the xtdc4 only the first entry is used."]
    pub buffer_size: [::std::os::raw::c_longlong; 8usize],
    #[doc = "\t\\brief The type of buffer"]
    #[doc = ""]
    #[doc = "\tCan be either allocated (only option currently) or physical."]
    #[doc = "\tPlease refer to group @link buffertype #defines of buffer_type @endlink."]
    pub buffer_type: ::std::os::raw::c_int,
    #[doc = "\t\\brief The start address of the reserved memory."]
    #[doc = ""]
    #[doc = "\tThe buffers will be allocated with the sizes given above. Make sure that the memory"]
    #[doc = "\tis large enough."]
    pub buffer_address: ::std::os::raw::c_longlong,
    #[doc = " \\brief A variant, for reconfiguring the chip for future extension"]
    #[doc = ""]
    pub variant: ::std::os::raw::c_int,
    #[doc = " \\brief A constant for the different devices of cronologic CRONO_DEVICE_*."]
    #[doc = ""]
    #[doc = "\tInitialized by @link initialization xtdc4_get_default_init_parameters() @endlink."]
    #[doc = "\tMust be left unchanged. Please refer to @link devicetype #define for device_type @endlink."]
    pub device_type: ::std::os::raw::c_int,
    #[doc = " \\brief The update delay of the writing pointer after a packet has been send over PCIe."]
    #[doc = ""]
    #[doc = "\tThe base unit is 16 to 32 ns."]
    pub dma_read_delay: ::std::os::raw::c_int,
    #[doc = " \\brief Select external 10 MHz reference."]
    #[doc = ""]
    #[doc = "  If set to 1 use external 10 MHz reference."]
    #[doc = "  If set to 0 use internal reference."]
    pub use_ext_clock: ::std::os::raw::c_int,
    #[doc = " \\brief Set THS788 RClk frequency, default is 150 MHz."]
    #[doc = ""]
    #[doc = " 0: 37.5 MHz"]
    #[doc = " 1: 75 MHz"]
    #[doc = " 2: 150 MHz"]
    pub rclk_sel: ::std::os::raw::c_int,
}
